# logic-lens

./: .gitignore  Cargo.toml  README.md
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
crates/logic-lens-cli/: Cargo.toml
crates/logic-lens-cli/src/: main.rs
crates/logic-lens-core/: Cargo.toml
crates/logic-lens-core/src/: config.rs  diff.rs  entity.rs  hallucination.rs  language.rs  lib.rs  lint.rs  output.rs  parser.rs  rules.rs  text_diff.rs  verify.rs
crates/logic-lens-core/tests/: integration.rs
crates/logic-lens-mcp/: Cargo.toml
crates/logic-lens-mcp/src/: main.rs
plugins/: .mcp.json  plugin.json
plugins/agents/: logic-lens.agent.md
plugins/scripts/: ll-preflight
plugins/skills/logic-lens-audit/: SKILL.md
plugins/skills/logic-lens-audit/assets/: default-rules.yaml
plugins/skills/logic-lens-audit/references/: output-schema.md  rules-guide.md
tests/fixtures/: OrderService.java  java_old.java  python_new.py  python_old.py  rust_new.rs  rust_old.rs  typescript_new.ts  typescript_old.ts
