[workspace]
members = [
    "crates/logic-lens-core",
    "crates/logic-lens-cli",
    "crates/logic-lens-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
logic-lens-core = { path = "crates/logic-lens-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ahash = "0.8"
thiserror = "2"
