[package]
name = "logic-lens-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "logic-lens"
path = "src/main.rs"

[dependencies]
logic-lens-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
atty = "0.2"
