[package]
name = "logic-lens-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ahash = { workspace = true }
thiserror = { workspace = true }
serde_yaml = "0.9"
regex = "1"
glob = "0.3"
quick-xml = { version = "0.37", features = ["serialize"] }

[dev-dependencies]
tempfile = "3"
