[package]
name = "logic-lens-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "logic-lens-mcp"
path = "src/main.rs"

[dependencies]
logic-lens-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
